# dame

./: .gitignore  CMakeLists.txt  Coordonée.cpp  Coordonée.h  Dame.cbp  Dame.depend  Dame.layout  Damier.cpp  Damier.h  Joueur.cpp  Joueur.h  Partie.cpp  Partie.h  Piece.cpp  Piece.h  Pion.cpp  README.md  main.cpp
src/exe/: main.cpp
src/lib/: Coordonee.cpp  Coordonee.h  Damier.h  Joueur.cpp  Joueur.h  Piece.h  Pion.h
